--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "exceljs": "^4.4.0",
     "html-to-image": "^1.11.11",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
