--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lottiefiles/lottie-player": "^2.0.12",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "country-state-city": "^3.2.1",
+    "dexie": "^4.0.10",
     "exceljs": "^4.4.0",
     "html-to-image": "^1.11.11",
+    "lottie-react": "^2.4.0",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
@@ -51,5 +58,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.13"
-  }
+  },
+  "proxy": "http://192.168.0.106:5000"
 }
