--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "dexie": "^4.0.10",
     "exceljs": "^4.4.0",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lottie-react": "^2.4.0",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
