--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "mongo-sanitize": "^1.1.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.6.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
