--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@lottiefiles/lottie-player": "^2.0.12",
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@mui/material": "^6.4.1",
+    "@mui/styled-engine-sc": "^6.4.0",
+    "@mui/x-charts": "^7.24.1",
     "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +25,7 @@
     "lottie-react": "^2.4.0",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-google-charts": "^5.2.1",
     "react-helmet": "^6.1.0",
@@ -33,6 +39,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.14",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
